# nexus-vagrant

./: .gitignore  README.md  Vagrantfile  renovate.json5  renovate.sh  wireshark.sh
hello-world-debian-package/hello-world/: Makefile
hello-world-debian-package/hello-world/debian/: changelog  control  copyright
hello-world-pypi-package/: LICENSE  README.md  pyproject.toml  requirements.txt
hello-world-pypi-package/src/hello_world/: __init__.py
provision/: execute-provision-ldap.groovy-script.sh  execute-provision.groovy-script.sh  nexus-groovy.sh  npm-login.js  provision-base.sh  provision-docker.sh  provision-dotnet-core-sdk.sh  provision-dotnet-sdk.sh  provision-nexus.sh  provision.sh  summary.sh  test.sh  use-apt-repository.sh  use-docker-repository.sh  use-maven-repository-from-gradle.sh  use-maven-repository-from-mvn.sh  use-npm-repository.sh  use-nuget-repository.sh  use-pypi-repository.sh  use-raw-repository.sh
provision/provision-nexus/: Makefile  README.md  pom.xml
provision/provision-nexus/src/main/groovy/: deploy.groovy  get-jenkins-nuget-api-key.groovy  provision-ldap.groovy  provision.groovy
provision/windows/: GoogleChrome-master_bookmarks.html  export-windows-ca-certificates.ps1  provision-base.ps1  ps.ps1  use-chocolatey-repository.ps1  use-npm-repository.ps1  use-powershell-repository.ps1
