[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world"
version = "0.1.0"
authors = [
  { name="Rui Lopes", email="rgl@example.com" },
]
description = "Hello World"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nexus-vagrant/hello-world-python-package"
"Bug Tracker" = "https://github.com/nexus-vagrant/issues"
